--- a/index.html
+++ b/index.html
@@ -19,49 +19,49 @@
         </div>
     </header>
     <div class="jogo-memoria">
-        <div class="botao"><img src="./imagens/(1).png" class="imagem"></div>
-        <div class="botao"><img src="./imagens/(1).png" class="imagem"></div>
-        <div class="botao"><img src="./imagens/(2).png" class="imagem"></div>
-        <div class="botao"><img src="./imagens/(2).png" class="imagem"></div>
-        <div class="botao"><img src="./imagens/(3).png" class="imagem"></div>
-        <div class="botao"><img src="./imagens/(3).png" class="imagem"></div>
-        <div class="botao"><img src="./imagens/(4).png" class="imagem"></div>
-        <div class="botao"><img src="./imagens/(4).png" class="imagem"></div>
-        <div class="botao"><img src="./imagens/(5).png" class="imagem"></div>
-        <div class="botao"><img src="./imagens/(5).png" class="imagem"></div>
-        <div class="botao"><img src="./imagens/(6).png" class="imagem"></div>
-        <div class="botao"><img src="./imagens/(6).png" class="imagem"></div>
-        <div class="botao"><img src="./imagens/(7).png" class="imagem"></div>
-        <div class="botao"><img src="./imagens/(7).png" class="imagem"></div>
-        <div class="botao"><img src="./imagens/(8).png" class="imagem"></div>
-        <div class="botao"><img src="./imagens/(8).png" class="imagem"></div>
-        <div class="botao"><img src="./imagens/(9).png" class="imagem"></div>
-        <div class="botao"><img src="./imagens/(9).png" class="imagem"></div>
-        <div class="botao"><img src="./imagens/(10).png" class="imagem"></div>
-        <div class="botao"><img src="./imagens/(10).png" class="imagem"></div>
-        <div class="botao"><img src="./imagens/(11).png" class="imagem"></div>
-        <div class="botao"><img src="./imagens/(11).png" class="imagem"></div>
-        <div class="botao"><img src="./imagens/(12).png" class="imagem"></div>
-        <div class="botao"><img src="./imagens/(12).png" class="imagem"></div>
-        <div class="botao"><img src="./imagens/(13).png" class="imagem"></div>
-        <div class="botao"><img src="./imagens/(13).png" class="imagem"></div>
-        <div class="botao"><img src="./imagens/(14).png" class="imagem"></div>
-        <div class="botao"><img src="./imagens/(14).png" class="imagem"></div>
-        <div class="botao"><img src="./imagens/(15).png" class="imagem"></div>
-        <div class="botao"><img src="./imagens/(15).png" class="imagem"></div>
-        <div class="botao"><img src="./imagens/(16).png" class="imagem"></div>
-        <div class="botao"><img src="./imagens/(16).png" class="imagem"></div>
-        <div class="botao"><img src="./imagens/(17).png" class="imagem"></div>
-        <div class="botao"><img src="./imagens/(17).png" class="imagem"></div>
-        <div class="botao"><img src="./imagens/(18).png" class="imagem"></div>
-        <div class="botao"><img src="./imagens/(18).png" class="imagem"></div>
+        <div class="botao"><img src="./imagens/(1).png" class="imagem oculto" accesskey="1"></div>
+        <div class="botao"><img src="./imagens/(1).png" class="imagem oculto" accesskey="1"></div>
+        <div class="botao"><img src="./imagens/(2).png" class="imagem oculto" accesskey="2"></div>
+        <div class="botao"><img src="./imagens/(2).png" class="imagem oculto" accesskey="2"></div>
+        <div class="botao"><img src="./imagens/(3).png" class="imagem oculto" accesskey="3"></div>
+        <div class="botao"><img src="./imagens/(3).png" class="imagem oculto" accesskey="3"></div>
+        <div class="botao"><img src="./imagens/(4).png" class="imagem oculto" accesskey="4"></div>
+        <div class="botao"><img src="./imagens/(4).png" class="imagem oculto" accesskey="4"></div>
+        <div class="botao"><img src="./imagens/(5).png" class="imagem oculto" accesskey="5"></div>
+        <div class="botao"><img src="./imagens/(5).png" class="imagem oculto" accesskey="5"></div>
+        <div class="botao"><img src="./imagens/(6).png" class="imagem oculto" accesskey="6"></div>
+        <div class="botao"><img src="./imagens/(6).png" class="imagem oculto" accesskey="6"></div>
+        <div class="botao"><img src="./imagens/(7).png" class="imagem oculto" accesskey="7"></div>
+        <div class="botao"><img src="./imagens/(7).png" class="imagem oculto" accesskey="7"></div>
+        <div class="botao"><img src="./imagens/(8).png" class="imagem oculto" accesskey="8"></div>
+        <div class="botao"><img src="./imagens/(8).png" class="imagem oculto" accesskey="8"></div>
+        <div class="botao"><img src="./imagens/(9).png" class="imagem oculto" accesskey="9"></div>
+        <div class="botao"><img src="./imagens/(9).png" class="imagem oculto" accesskey="9"></div>
+        <div class="botao"><img src="./imagens/(10).png" class="imagem oculto" accesskey="10"></div>
+        <div class="botao"><img src="./imagens/(10).png" class="imagem oculto" accesskey="10"></div>
+        <div class="botao"><img src="./imagens/(11).png" class="imagem oculto" accesskey="11"></div>
+        <div class="botao"><img src="./imagens/(11).png" class="imagem oculto" accesskey="11"></div>
+        <div class="botao"><img src="./imagens/(12).png" class="imagem oculto" accesskey="12"></div>
+        <div class="botao"><img src="./imagens/(12).png" class="imagem oculto" accesskey="12"></div>
+        <div class="botao"><img src="./imagens/(13).png" class="imagem oculto" accesskey="13"></div>
+        <div class="botao"><img src="./imagens/(13).png" class="imagem oculto" accesskey="13"></div>
+        <div class="botao"><img src="./imagens/(14).png" class="imagem oculto" accesskey="14"></div>
+        <div class="botao"><img src="./imagens/(14).png" class="imagem oculto" accesskey="14"></div>
+        <div class="botao"><img src="./imagens/(15).png" class="imagem oculto" accesskey="15"></div>
+        <div class="botao"><img src="./imagens/(15).png" class="imagem oculto" accesskey="15"></div>
+        <div class="botao"><img src="./imagens/(16).png" class="imagem oculto" accesskey="16"></div>
+        <div class="botao"><img src="./imagens/(16).png" class="imagem oculto" accesskey="16"></div>
+        <div class="botao"><img src="./imagens/(17).png" class="imagem oculto" accesskey="17"></div>
+        <div class="botao"><img src="./imagens/(17).png" class="imagem oculto" accesskey="17"></div>
+        <div class="botao"><img src="./imagens/(18).png" class="imagem oculto" accesskey="18"></div>
+        <div class="botao"><img src="./imagens/(18).png" class="imagem oculto" accesskey="18"></div>
     </div>
     <div class="players">
-        <button class="player"><h2>P1</h2><p>0</p></button>
+        <button class="player player-ativo"><h2>P1</h2><p>0</p></button>
         <button class="player"><h2>P2</h2><p>0</p></button>
         <button class="player"><h2>P3</h2><p>0</p></button>
         <button class="player"><h2>P4</h2><p>0</p></button>
     </div>
-    
+<script src="./script.js"></script>    
 </body>
 </html>
