--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
             <button class="newgame">New Game</button>
         </div>
     </header>
+    <div class="inicio-do-jogo">
+        <h2>Escolha o número de jogadores</h2>
+        <div class="numero-de-jogadores">
+            <button class="jogadores 1">1</button>
+            <button class="jogadores 2">2</button>
+            <button class="jogadores 3">3</button>
+            <button class="jogadores 4">4</button>
+        </div>
+    </div>
     <div class="jogo-memoria">
         <div class="botao"><img src="./imagens/(1).png" class="imagem oculto" accesskey="1"></div>
         <div class="botao"><img src="./imagens/(1).png" class="imagem oculto" accesskey="1"></div>
