--- a/index.html
+++ b/index.html
@@ -65,8 +65,11 @@
         <div class="botao"><img src="./imagens/(18).png" class="imagem oculto" accesskey="18"></div>
         <div class="botao"><img src="./imagens/(18).png" class="imagem oculto" accesskey="18"></div>
     </div>
+    <div class="um-player inativo">
+        <button class="tentativas">Tentativas: 0</button>
+    </div>
     <div class="players">
-        <button class="player player-ativo"><h2>P1</h2><p>0</p></button>
+        <button class="player"><h2>P1</h2><p>0</p></button>
         <button class="player"><h2>P2</h2><p>0</p></button>
         <button class="player"><h2>P3</h2><p>0</p></button>
         <button class="player"><h2>P4</h2><p>0</p></button>
