incluindo mensagem de fim de jogo

--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
         <button class="player"><h2>P3</h2><p>0</p></button>
         <button class="player"><h2>P4</h2><p>0</p></button>
     </div>
+    <div class="vitoria inativo">PLAYER 1 GANHOU</div>
+    <div class="empate inativo">EMPATE</div>
+
 <script src="./script.js"></script>    
 </body>
 </html>
