--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <button class="tentativas">Tentativas: 0</button>
     </div>
     <div class="players">
-        <button class="player"><h2>P1</h2><p>0</p></button>
+        <button class="player player-ativo"><h2>P1</h2><p>0</p></button>
         <button class="player"><h2>P2</h2><p>0</p></button>
         <button class="player"><h2>P3</h2><p>0</p></button>
         <button class="player"><h2>P4</h2><p>0</p></button>
